force-app/main/default/objects/Checklist2__c/Checklist2__c.object-meta.xml
<CustomObject>
    <description>Test integration via org</description>
    <label>Checklist2</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>