force-app/main/default/objects/Checklist2__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>this will be discription of list item</description>
    <inlineHelpText>this will be discription of list item</inlineHelpText>
    <label>description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>