force-app/main/default/objects/Checklist2__c/fields/Picklist1__c.field-meta.xml
<CustomField>
    <fullName>Picklist1__c</fullName>
    <description>test picklist</description>
    <inlineHelpText>test picklist 1</inlineHelpText>
    <label>Picklist1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account closure</fullName>
            </value>
            <value>
                <fullName>Accounts addin</fullName>
            </value>
            <value>
                <fullName>Administration  lookup</fullName>
            </value>
            <value>
                <fullName>File closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>