force-app/main/default/objects/Checklist2__c/fields/Picklist2__c.field-meta.xml
<CustomField>
    <fullName>Picklist2__c</fullName>
    <description>test picklist</description>
    <label>Picklist2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto populate</fullName>
            </value>
            <value>
                <fullName>Go daddy</fullName>
            </value>
            <value>
                <fullName>Go disco</fullName>
            </value>
            <value>
                <fullName>Go golang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>