force-app/main/default/objects/Checklist2__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to set status</description>
    <inlineHelpText>checkbox to show statsu</inlineHelpText>
    <label>status</label>
    <type>Checkbox</type>
</CustomField>