force-app/main/default/objects/Checklist2__c/recordTypes/ChecklistRecords.recordType-meta.xml
<RecordType>
    <fullName>ChecklistRecords</fullName>
    <active>true</active>
    <description>collection of records</description>
    <label>ChecklistRecords</label>
</RecordType>