force-app/main/default/objects/Checklist2__c/recordTypes/ChecklistTitle.recordType-meta.xml
<RecordType>
    <fullName>ChecklistTitle</fullName>
    <active>true</active>
    <description>This is a special Record for making Checklist title editable on lwc</description>
    <label>ChecklistTitle</label>
</RecordType>