force-app/main/default/objects/Checklist2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>status__c</columns>
    <columns>Picklist1__c</columns>
    <columns>description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>