force-app/main/default/objects/Checklist2__c/listViews/checklist2view.listView-meta.xml
<ListView>
    <fullName>checklist2view</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>description__c</columns>
    <columns>Picklist1__c</columns>
    <columns>Picklist2__c</columns>
    <columns>status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>checklist2view</label>
</ListView>